# mini_langchain

./: .env  README.md  docker-compose.yml  pyproject.toml
1_chat_models/: chat_model_1.py  chat_model_conversation.py  chat_model_conversation_mongo.py  chat_model_conversation_with_user.py
2_prompt_template/: 1_prompt_template_starter.py
3_chains/: 1_chains_basics.py  2_chains_inner_workings.py  3_chains_sequential.py  4_chains_parallel.py  5_chains_conditional.py
4_RAGs/: 1a_basic_part.py  1b_basic_part.py
4_RAGs/documents/: huozhe.txt
4_RAGs/milvus/: docker-compose.yml
4_RAGs/milvus/volumes/minio/.minio.sys/: format.json
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/10.blk/7edbe835-f314-4951-b3e5-3424d1edd1ac/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/14.blk/fa83110a-242e-4e28-bf87-00a4a6d7cfa3/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/16.blk/62db3e67-7423-46fa-9d9d-d951be1cc2e2/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/5.blk/0598c153-0fe1-4f54-8974-e9b674bba2df/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/9.blk/f2112ad1-d19e-492c-9035-713603d29c64/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/m_1.blk/bfa7f44f-beca-4021-9a4d-e4199c655a95/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/m_3.blk/f6b7eb60-5d2a-4441-a36a-39b921cb5da0/: part.1
4_RAGs/milvus/volumes/minio/a-bucket/files/wp/1/2/m_4.blk/e689d96f-db3d-4ba9-8c29-7cbb3d2d82ac/: part.1
5_agents/: 1_basics.py
(+16 files in other folders)
