[project]
name = "mini-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "hf-xet>=1.2.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-deepseek>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-milvus>=0.2.2",
    "langchain-mongodb>=0.7.1",
    "langchain-openai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "pymilvus>=2.6.2",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.2",
]
